# python-django-template

./: .env.example  .gitignore  Dockerfile.dev  GUIDELINES.md  Makefile  README.md  docker-compose.yaml  initial_setup.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.services.yml  docker-compose.yml
api/config/: application.py  celery.py  security.py  settings.py
docs/: AUTH.md  ROUTERS.md  SERIALIZERS.md  TESTS.md  VALIDATIONS.md  VIEWSETS.md
tests/: test_api_init.py  test_user_admin.py  test_user_apps.py  test_user_models.py
